alignment corrections

--- a/styles1080.css
+++ b/styles1080.css
@@ -70,6 +70,11 @@
         max-height: 33px;
         
     }
+    .sec4-main-img {
+        margin: 0 auto;
+        overflow: hidden;
+        object-fit: cover;
+    }
     
 }
 @media screen and (min-width:1280px) {
