--- a/styles540.css
+++ b/styles540.css
@@ -1,6 +1,6 @@
 @media screen and (min-width:505px) {
     .mini-nav {
-        max-height: 24px;
+        height: 24px;
     }
     .S1-secondary {
         margin-top: 12px;
