--- a/styles768.css
+++ b/styles768.css
@@ -108,6 +108,8 @@
         max-width: 1280px;
         margin: 0 auto;
     }
+
+
     /* SECTION 2 */
 
 
@@ -115,13 +117,14 @@
         display: block;
     }
     .sec-2 {
-        max-width: 1280px;
+        /* max-width: 1280px; */
+        max-width: 1310px;
         margin: 0 auto;
     }
     .sec2-content {
         display: grid;
         grid-template-columns: repeat(2,1fr);
-        grid-template-rows: repeat(2,1fr);
+        grid-template-rows: 1fr;
         column-gap: 30px;
         row-gap: 20px;
     }
@@ -139,11 +142,14 @@
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
-        grid-row: 1/3;
+        grid-row: 1/ span 2;
         grid-column: 1/2;
     }
     .item1:hover {
         text-decoration: underline;
+    }
+    .S2-primary-h2 {
+        font-size: 24px;
     }
     .item1 .S2-subitems {
         position: absolute;
@@ -177,7 +183,7 @@
         background-repeat: no-repeat;
     }
     .item2 {
-        grid-row: 1/2;
+        /* grid-row: 1/2; */
         position: relative;
     }
     .item3 div:first-child {
@@ -187,14 +193,14 @@
         top: 0;
         left: 0;
         bottom: 0;
-        /* background-size: contain; */
+        background-size: cover;
         background-position: 50% 50%;
         background-repeat: no-repeat;
         border-radius: 6px;
 
     }
     .item3 {
-        grid-row: 2/3;
+        /* grid-row: 2/3; */
         position: relative;
     }
     .S2-items div img {
@@ -202,7 +208,8 @@
         visibility: hidden;
     }
     .S2-subitems {
-        padding: 24px;
+        padding: 24px 24px 24px 24px ;
+        margin: 0;
     }
     .item2 .S2-subitems, .item3 .S2-subitems {
         padding-left: 168px;
@@ -218,7 +225,7 @@
     .item2 .S2-subitems, .item3 .S2-subitems {
     font-size: 16px;
     color: #4c4c51;
-    margin: 12px 0;
+    /* margin: 12px 0; */
     
     }
     .S2-last {
@@ -237,6 +244,7 @@
     .S2-last a:last-child {
         width: auto;
     }
+
     
     /* section 3 */
 
