--- a/styles960.css
+++ b/styles960.css
@@ -210,7 +210,8 @@
         height: 100%;
         min-height: 600px;
         max-height: 700px;
-        max-width: none;
+        max-width: 1920px;
+        margin: 0 auto;
         object-fit: cover;
     }
     .sec7-img img:first-child {
@@ -294,6 +295,11 @@
         display: grid;
         grid-template-columns: repeat(6, 1fr);
         gap: 24px;
+        margin-top: 36px;
+        line-height: normal;
+    }
+    li , a {
+        line-height: normal;
     }
     .footer-column {
         display: flex;
@@ -302,13 +308,11 @@
         align-items: flex-start;
         background: #f4f5f6;
         padding: 0;
+        margin: 0;
         min-width: 134px;
-        line-height: 1;
-
     }
     .footer-listing  li {
         margin-top: 12px;
-
     }
     .footer-listing li a {
         font-size: 12px;
