--- a/styles_mobile.css
+++ b/styles_mobile.css
@@ -117,6 +117,10 @@ nav ul li img:hover {
     height: 14px;
 }
 .mini-nav p {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    gap: 1px;
     font-size: 14px;
     font-weight: 600;
     text-align: center;
@@ -158,7 +162,7 @@ nav ul li img:hover {
 .S1-secondary p {
     color: #F8F9FA;
     font-size: 18px;
-    line-height: 1.2;
+    line-height: 1.3;
 }
 .S1-secondary {
     margin-top: 10%;
@@ -174,7 +178,9 @@ nav ul li img:hover {
     width: 85%;
     margin-top: 12px;
     padding: 10px 16px;
+    border: 1px solid #0078d4;
     font-size: 14px;
+    font-weight: 600;
     border-radius: 4px;
 }
 .S1-third a:hover {
@@ -202,6 +208,7 @@ nav ul li img:hover {
     float: left;
     text-align: center;
 }
+/* section 2 */
 
 .sec-2 {
     padding: 60px 0;
@@ -751,6 +758,7 @@ nav ul li img:hover {
 }
 
 .floating-msg {
+    white-space: nowrap;
     display: flex;
     flex-flow: row;
     align-items: center;
@@ -782,7 +790,7 @@ footer {
     /* height: 566px; */
 }
 .footer-content {
-    max-width: 1280px;  
+    max-width: 1274px;  
     margin: 0 auto;
     padding: 0 18px;
 }
@@ -840,7 +848,6 @@ ul.footer-listing {
     flex-flow: row;
     justify-content: space-between;
     align-items: center;
-    line-height: 1.5;
 }
 .footer-column h3 {
     font-size: 14px;
@@ -868,8 +875,9 @@ form label {
     width: 100%;
     border: 1px solid #747479;
     background: #fff;
+    color: var(--text-color);
     font-size: 14px;
-    font-weight: 300;
+    font-weight: normal;
     padding: 5px;
     height: 36px;
 }
